--- a/4thIR.NERecognizeF/_4thIR.NERecognizeF.Activities/_4thIR.NERecognizeF.Activities.csproj
+++ b/4thIR.NERecognizeF/_4thIR.NERecognizeF.Activities/_4thIR.NERecognizeF.Activities.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>net461</TargetFrameworks>
 		<RootNamespace>_4thIR.NERecognizeF.Activities</RootNamespace>
@@ -27,7 +27,7 @@
 		<Reference Include="WindowsBase" />
 	</ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\_4thIR.NERecognizeF\_4thIR.NERecognizeF.csproj" PrivateAssets="All"/>
+    <ProjectReference Include="..\_4thIR.NERecognizeF\_4thIR.NERecognizeF.csproj" PrivateAssets="All" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
@@ -44,9 +44,6 @@
     <EmbeddedResource Update="Properties\Resources.*.resx">
       <DependentUpon>Resources.resx</DependentUpon>
     </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Activities\" />
   </ItemGroup>
   <Import Project="..\..\Shared\UiPath.Shared.Activities\UiPath.Shared.Activities.projitems" Label="Shared" />
 </Project>
