--- a/4thIR.SAnalyzeDB/_4thIR.SAnalyzeDB/_4thIR.SAnalyzeDB.csproj
+++ b/4thIR.SAnalyzeDB/_4thIR.SAnalyzeDB/_4thIR.SAnalyzeDB.csproj
@@ -30,6 +30,9 @@
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+  <ItemGroup>
     <Reference Include="System.Net.Http" />
   </ItemGroup>
 </Project>
