--- a/4thIR.DocClassify/_4thIR.DocClassify.Activities.Design/_4thIR.DocClassify.Activities.Design.csproj
+++ b/4thIR.DocClassify/_4thIR.DocClassify.Activities.Design/_4thIR.DocClassify.Activities.Design.csproj
@@ -3,16 +3,16 @@
     <TargetFrameworks>net461</TargetFrameworks>
 		<RootNamespace>_4thIR.DocClassify.Activities.Design</RootNamespace>
 		<AssemblyName>_4thIR.DocClassify.Activities.Design</AssemblyName>
-    <PackageId>4th-IR.DocumentClassification.Activity.DocumentClassification</PackageId>
+    <PackageId>4th-IR.DocumentClassificationKYC.Activity.DocumentClassification</PackageId>
   </PropertyGroup>
   <!-- Package Metadata -->
   <PropertyGroup>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-    <Description>UI Path Activity for classifying documents.</Description>
+    <Description>UI Path Activity for classifying documents (KYC Document Classifier).</Description>
     <Authors>Ato Toffah</Authors>
-    <Company>4th IR</Company>
-    <Copyright>© 2020 4th IR</Copyright>
+    <Company>4th-IR</Company>
+    <Copyright>© 2022 4th-IR</Copyright>
     <PackageTags>UiPath Activit𝗒</PackageTags>
     <PackageProjectUrl>https://docs.uipath.com/integrations/docs/how-to-create-activities</PackageProjectUrl>
     <PackageIconUrl>https://raw.githubusercontent.com/NuGet/Samples/master/PackageIconNuspecExample/icon.png</PackageIconUrl>
@@ -27,14 +27,14 @@
     <PackageVersion>0.1.0.$([System.DateTime]::UtcNow.ToString(MMddHHmmss))</PackageVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
-    <PackageVersion>0.1.0</PackageVersion>
+    <PackageVersion>0.2.0</PackageVersion>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Designers\DocumentClassificationDesigner.xaml" />
   </ItemGroup>
   <!-- Package Icon -->
   <ItemGroup>
-    <None Include="..\..\..\logo2.png">
+    <None Include="..\..\Logo\logo2.png">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
@@ -59,6 +59,7 @@
     <DocumentationFile>bin\$(Configuration)\_4thIR.DocClassify.Activities.Design.xml</DocumentationFile>
     <Title>Document Classification</Title>
     <PackageIcon>logo2.png</PackageIcon>
+    <RepositoryUrl>https://github.com/UnfetteredScholar/4thIR.DocumentClassification.git</RepositoryUrl>
   </PropertyGroup>
 	<ItemGroup>
 		<Reference Include="System" />
