--- a/4thIR.DocClassify/_4thIR.DocClassify.Activities.Design/_4thIR.DocClassify.Activities.Design.csproj
+++ b/4thIR.DocClassify/_4thIR.DocClassify.Activities.Design/_4thIR.DocClassify.Activities.Design.csproj
@@ -86,6 +86,7 @@
     </Page>
     <Page Include="Designers\DocumentClassificationDesigner.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Page>
     <Page Include="Themes\Icons.xaml">
       <Generator>XamlIntelliSenseFileGenerator</Generator>
