--- a/4thIR.DocClassify/_4thIR.DocClassify/_4thIR.DocClassify.csproj
+++ b/4thIR.DocClassify/_4thIR.DocClassify/_4thIR.DocClassify.csproj
@@ -45,6 +45,7 @@
     <Folder Include="Contracts\" />
     <Folder Include="Enums\" />
     <Folder Include="Models\" />
+    <Folder Include="Contracts\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
