--- a/4thIR.TextTranslation/_4thIR.TextTranslation/_4thIR.TextTranslation.csproj
+++ b/4thIR.TextTranslation/_4thIR.TextTranslation/_4thIR.TextTranslation.csproj
@@ -45,6 +45,7 @@
     <Folder Include="Contracts\" />
     <Folder Include="Enums\" />
     <Folder Include="Models\" />
+    <Folder Include="Contracts\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
