--- a/4thIR.TextTranslation/_4thIR.TextTranslation.Activities.Design/_4thIR.TextTranslation.Activities.Design.csproj
+++ b/4thIR.TextTranslation/_4thIR.TextTranslation.Activities.Design/_4thIR.TextTranslation.Activities.Design.csproj
@@ -3,14 +3,13 @@
     <TargetFrameworks>net461</TargetFrameworks>
 		<RootNamespace>_4thIR.TextTranslation.Activities.Design</RootNamespace>
 		<AssemblyName>_4thIR.TextTranslation.Activities.Design</AssemblyName>
-    <PackageId>4th-IR.TextTranslation.Activity.Translation</PackageId>
+    <PackageId>4th-IR.TextTranslationTMultilanguage.Activity.Translation</PackageId>
   </PropertyGroup>
   <!-- Package Metadata -->
   <PropertyGroup>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-    <Description>Package for text translation UiPath activity.
-This activity translates text from one language to another.</Description>
+    <Description>UI Path activity for text translation. (Text Translation - Transformers (Multilanguage))</Description>
     <Authors>Ato Toffah</Authors>
     <Company>4th-IR</Company>
     <Copyright>© 2022 4th-IR</Copyright>
@@ -28,14 +27,14 @@ This activity translates text from one language to another.</Description>
     <PackageVersion>0.1.0.$([System.DateTime]::UtcNow.ToString(MMddHHmmss))</PackageVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
-    <PackageVersion>0.1.0</PackageVersion>
+    <PackageVersion>0.2.0</PackageVersion>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Designers\TranslationDesigner.xaml" />
   </ItemGroup>
   <!-- Package Icon -->
   <ItemGroup>
-    <None Include="..\..\..\logo2.png">
+    <None Include="..\..\Logo\logo2.png">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
@@ -60,6 +59,7 @@ This activity translates text from one language to another.</Description>
     <DocumentationFile>bin\$(Configuration)\_4thIR.TextTranslation.Activities.Design.xml</DocumentationFile>
     <Title>Text Translation</Title>
     <PackageIcon>logo2.png</PackageIcon>
+    <RepositoryUrl>https://github.com/UnfetteredScholar/4thIR.TextTranslation.git</RepositoryUrl>
   </PropertyGroup>
 	<ItemGroup>
 		<Reference Include="System" />
@@ -86,6 +86,7 @@ This activity translates text from one language to another.</Description>
     </Page>
     <Page Include="Designers\TranslationDesigner.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Page>
     <Page Include="Themes\Icons.xaml">
       <Generator>XamlIntelliSenseFileGenerator</Generator>
