--- a/4thIR.ImageClassifyR50/_4thIR.ImageClassifyR50.Activities.Design/_4thIR.ImageClassifyR50.Activities.Design.csproj
+++ b/4thIR.ImageClassifyR50/_4thIR.ImageClassifyR50.Activities.Design/_4thIR.ImageClassifyR50.Activities.Design.csproj
@@ -4,14 +4,14 @@
     <UseWPF>true</UseWPF>
 		<RootNamespace>_4thIR.ImageClassifyR50.Activities.Design</RootNamespace>
 		<AssemblyName>_4thIR.ImageClassifyR50.Activities.Design</AssemblyName>
-    <PackageId>4thIR.ImageClassification.Activity.ImageClassificationResnet50</PackageId>
+    <PackageId>4thIR.ImageClassificationResnet50.Activity.ImageClassificationResnet50</PackageId>
     <EnableDefaultPageItems>false</EnableDefaultPageItems>
   </PropertyGroup>
   <!-- Package Metadata -->
   <PropertyGroup>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-    <Description>UI Path activity for performing image classification.</Description>
+    <Description>UI Path activity for performing image classification.(Image Classification - Resnet 50)</Description>
     <Authors>Ato Toffah</Authors>
     <Company>4th-IR</Company>
     <Copyright>© 2022 4th-IR</Copyright>
@@ -29,14 +29,14 @@
     <PackageVersion>0.1.0.$([System.DateTime]::UtcNow.ToString(MMddHHmmss))</PackageVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
-    <PackageVersion>0.1.0</PackageVersion>
+    <PackageVersion>0.2.0</PackageVersion>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Designers\ImageClassificationDesigner.xaml" />
   </ItemGroup>
   <!-- Package Icon -->
   <ItemGroup>
-    <None Include="..\..\..\logo2.png">
+    <None Include="..\..\Logo\logo2.png">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
@@ -61,6 +61,8 @@
     <DocumentationFile>bin\$(Configuration)\_4thIR.ImageClassifyR50.Activities.Design.xml</DocumentationFile>
     <Product>Image Classification</Product>
     <PackageIcon>logo2.png</PackageIcon>
+    <Title>Image Classification</Title>
+    <RepositoryUrl>https://github.com/UnfetteredScholar/4th-IR.ImageClassificationResnet50.git</RepositoryUrl>
   </PropertyGroup>
 	<ItemGroup>
 		<Reference Include="System" />
@@ -87,6 +89,7 @@
     </Page>
     <Page Include="Designers\ImageClassificationDesigner.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Page>
     <Page Include="Themes\Icons.xaml">
       <Generator>XamlIntelliSenseFileGenerator</Generator>
