--- a/4thIR.QAnsweringRBS2/_4thIR.QAnsweringRBS2.Activities.Design/_4thIR.QAnsweringRBS2.Activities.Design.csproj
+++ b/4thIR.QAnsweringRBS2/_4thIR.QAnsweringRBS2.Activities.Design/_4thIR.QAnsweringRBS2.Activities.Design.csproj
@@ -11,7 +11,7 @@
   <PropertyGroup>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-    <Description>UI Path activity for answering questions based on context.</Description>
+    <Description>UI Path activity for answering questions based on context.(Roberta Base Squad 2 - Question Answer)</Description>
     <Authors>Ato Toffah</Authors>
     <Company>4th-IR</Company>
     <Copyright>© 2022 4th-IR</Copyright>
@@ -29,14 +29,14 @@
     <PackageVersion>0.1.0.$([System.DateTime]::UtcNow.ToString(MMddHHmmss))</PackageVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
-    <PackageVersion>0.1.0</PackageVersion>
+    <PackageVersion>0.2.0</PackageVersion>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Designers\QuestionAnsweringDesigner.xaml" />
   </ItemGroup>
   <!-- Package Icon -->
   <ItemGroup>
-    <None Include="..\..\..\logo2.png">
+    <None Include="..\..\Logo\logo2.png">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
@@ -60,6 +60,8 @@
     <OutputPath>bin\$(Configuration)\</OutputPath>
     <DocumentationFile>bin\$(Configuration)\_4thIR.QAnsweringRBS2.Activities.Design.xml</DocumentationFile>
     <PackageIcon>logo2.png</PackageIcon>
+    <Title>Question Answering</Title>
+    <RepositoryUrl>https://github.com/UnfetteredScholar/4thIR.Roberta-Base-Squad-2.Question-Answer.git</RepositoryUrl>
   </PropertyGroup>
   <ItemGroup>
 		<Reference Include="System" />
