--- a/4thIR.NERecognition/_4thIR.NERecognition.Activities.Design/_4thIR.NERecognition.Activities.Design.csproj
+++ b/4thIR.NERecognition/_4thIR.NERecognition.Activities.Design/_4thIR.NERecognition.Activities.Design.csproj
@@ -4,14 +4,14 @@
     <UseWPF>true</UseWPF>
 		<RootNamespace>_4thIR.NERecognition.Activities.Design</RootNamespace>
 		<AssemblyName>_4thIR.NERecognition.Activities.Design</AssemblyName>
-    <PackageId>4thIR.NameEntityRecognition.Activity.NameEntityRecognition</PackageId>
+    <PackageId>4thIR.NameEntityRecognitionFlair.Activity.NameEntityRecognition</PackageId>
     <EnableDefaultPageItems>false</EnableDefaultPageItems>
   </PropertyGroup>
   <!-- Package Metadata -->
   <PropertyGroup>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-    <Description>UI Path activity for name entity recognition in a sentence.</Description>
+    <Description>UI Path activity for name entity recognition in a text. (Name Entity Recognition - Flair)</Description>
     <Authors>Ato Toffah</Authors>
     <Company>4th-IR</Company>
     <Copyright>© 2022 4th-IR</Copyright>
@@ -36,7 +36,7 @@
   </ItemGroup>
   <!-- Package Icon -->
   <ItemGroup>
-    <None Include="..\..\..\logo2.png">
+    <None Include="..\..\Logo\logo2.png">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
@@ -61,6 +61,7 @@
     <DocumentationFile>bin\$(Configuration)\_4thIR.NERecognition.Activities.Design.xml</DocumentationFile>
     <Title>Name Entity Recognition</Title>
     <PackageIcon>logo2.png</PackageIcon>
+    <RepositoryUrl>https://github.com/UnfetteredScholar/4thIR.NameEntityRecognition.git</RepositoryUrl>
   </PropertyGroup>
   <ItemGroup>
 		<Reference Include="System" />
