--- a/4thIR.TextGenerateF/_4thIR.TextGenerateF.Activities.Design/_4thIR.TextGenerateF.Activities.Design.csproj
+++ b/4thIR.TextGenerateF/_4thIR.TextGenerateF.Activities.Design/_4thIR.TextGenerateF.Activities.Design.csproj
@@ -11,7 +11,7 @@
   <PropertyGroup>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-    <Description>UI Path activity for summarizing text.</Description>
+    <Description>UI Path activity for generating text. (Text Generation - Fairseq)</Description>
     <Authors>Ato Toffah</Authors>
     <Company>4th-IR</Company>
     <Copyright>© 2022 4th-IR</Copyright>
@@ -36,7 +36,7 @@
   </ItemGroup>
   <!-- Package Icon -->
   <ItemGroup>
-    <None Include="..\..\..\logo2.png">
+    <None Include="..\..\Logo\logo2.png">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
@@ -61,6 +61,7 @@
     <DocumentationFile>bin\$(Configuration)\_4thIR.TextGenerateF.Activities.Design.xml</DocumentationFile>
     <Title>Text Generation</Title>
     <PackageIcon>logo2.png</PackageIcon>
+    <RepositoryUrl>https://github.com/UnfetteredScholar/4thIR.TextGenerationFairseq.git</RepositoryUrl>
   </PropertyGroup>
   <ItemGroup>
 		<Reference Include="System" />
