--- a/4thIR.ImageClassifyEB1/_4thIR.ImageClassifyEB1.Activities.Design/_4thIR.ImageClassifyEB1.Activities.Design.csproj
+++ b/4thIR.ImageClassifyEB1/_4thIR.ImageClassifyEB1.Activities.Design/_4thIR.ImageClassifyEB1.Activities.Design.csproj
@@ -4,19 +4,19 @@
     <UseWPF>true</UseWPF>
 		<RootNamespace>_4thIR.ImageClassifyEB1.Activities.Design</RootNamespace>
 		<AssemblyName>_4thIR.ImageClassifyEB1.Activities.Design</AssemblyName>
-    <PackageId>_4thIR.ImageClassifyEB1.Activities</PackageId>
+    <PackageId>4thIR.ImageClassificationEfficientNetB1.Activity.ImageClassification</PackageId>
     <EnableDefaultPageItems>false</EnableDefaultPageItems>
   </PropertyGroup>
   <!-- Package Metadata -->
   <PropertyGroup>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-    <Description>This package was generated using the UiPath VS Extension.</Description>
-    <Authors>Company</Authors>
-    <Company>Company</Company>
-    <Copyright>© 2022 Company</Copyright>
+    <Description>UI Path activity for image classification. (Image Classification - EfficientNetB1)</Description>
+    <Authors>Ato Toffah</Authors>
+    <Company>4th-IR</Company>
+    <Copyright>© 2022 4th-IR</Copyright>
     <PackageTags>UiPath Activit𝗒</PackageTags>
-    <PackageProjectUrl>https://docs.uipath.com/integrations/docs/how-to-create-activities</PackageProjectUrl>
+    <PackageProjectUrl>https://www.4th-ir.com</PackageProjectUrl>
     <PackageIconUrl>https://raw.githubusercontent.com/NuGet/Samples/master/PackageIconNuspecExample/icon.png</PackageIconUrl>
     <!--<PackageIcon>packageIcon.png</PackageIcon>--> <!--PackageIcon not yet supported in UiPath Studio-->
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
@@ -31,8 +31,15 @@
   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
     <PackageVersion>0.1.0</PackageVersion>
   </PropertyGroup>
+  <ItemGroup>
+    <None Remove="Designers\ImageClassificationDesigner.xaml" />
+  </ItemGroup>
   <!-- Package Icon -->
   <ItemGroup>
+    <None Include="..\..\Logo\logo2.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
     <None Include="packageIcon.png" Pack="true" Visible="false" PackagePath="" />
   </ItemGroup>
   <Target Name="CopyProjectReferencesToPackage" DependsOnTargets="BuildOnlySettings;ResolveReferences">
@@ -52,6 +59,9 @@
   <PropertyGroup>
     <OutputPath>bin\$(Configuration)\</OutputPath>
     <DocumentationFile>bin\$(Configuration)\_4thIR.ImageClassifyEB1.Activities.Design.xml</DocumentationFile>
+    <Title>Image Classification</Title>
+    <PackageIcon>logo2.png</PackageIcon>
+    <RepositoryUrl>https://github.com/UnfetteredScholar/4thIR.ImageClassification-EfficientNetB1.git</RepositoryUrl>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="UiPath.Workflow" Version="6.0.0-20220909-01" PrivateAssets="All" />
@@ -64,6 +74,9 @@
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Page>
+    <Page Include="Designers\ImageClassificationDesigner.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </Page>
     <Page Include="Themes\Icons.xaml">
       <Generator>XamlIntelliSenseFileGenerator</Generator>
       <SubType>Designer</SubType>
@@ -71,10 +84,7 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\_4thIR.ImageClassifyEB1.Activities\_4thIR.ImageClassifyEB1.Activities.csproj" PrivateAssets="All"/>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Designers\" />
+    <ProjectReference Include="..\_4thIR.ImageClassifyEB1.Activities\_4thIR.ImageClassifyEB1.Activities.csproj" PrivateAssets="All" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
