--- a/4thIR.ImageClassifyFL/_4thIR.ImageClassifyFL.Activities/_4thIR.ImageClassifyFL.Activities.csproj
+++ b/4thIR.ImageClassifyFL/_4thIR.ImageClassifyFL.Activities/_4thIR.ImageClassifyFL.Activities.csproj
@@ -11,10 +11,10 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="System.Activities.Metadata" Version="6.0.0-*" PrivateAssets="All" />
-    <PackageReference Include="UiPath.Workflow.Runtime" Version="6.0.0-20220909-01" PrivateAssets="All"/>
+    <PackageReference Include="UiPath.Workflow.Runtime" Version="6.0.0-20220909-01" PrivateAssets="All" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\_4thIR.ImageClassifyFL\_4thIR.ImageClassifyFL.csproj" PrivateAssets="All"/>
+    <ProjectReference Include="..\_4thIR.ImageClassifyFL\_4thIR.ImageClassifyFL.csproj" PrivateAssets="All" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
@@ -33,6 +33,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Activities\" />
     <Folder Include="Activities\" />
   </ItemGroup>
   <Import Project="..\..\Shared\UiPath.Shared.Activities\UiPath.Shared.Activities.projitems" Label="Shared" />
