--- a/4thIR.ImageClassifyFL/_4thIR.ImageClassifyFL/_4thIR.ImageClassifyFL.csproj
+++ b/4thIR.ImageClassifyFL/_4thIR.ImageClassifyFL/_4thIR.ImageClassifyFL.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>net6.0</TargetFrameworks>
 		<RootNamespace>_4thIR.ImageClassifyFL</RootNamespace>
@@ -28,5 +28,6 @@
     <Folder Include="Contracts\" />
     <Folder Include="Enums\" />
     <Folder Include="Models\" />
+    <Folder Include="Contracts\" />
   </ItemGroup>
 </Project>
