--- a/4thIR.ImageClassifyFL/_4thIR.ImageClassifyFL.Activities.Design/_4thIR.ImageClassifyFL.Activities.Design.csproj
+++ b/4thIR.ImageClassifyFL/_4thIR.ImageClassifyFL.Activities.Design/_4thIR.ImageClassifyFL.Activities.Design.csproj
@@ -4,17 +4,17 @@
     <UseWPF>true</UseWPF>
 		<RootNamespace>_4thIR.ImageClassifyFL.Activities.Design</RootNamespace>
 		<AssemblyName>_4thIR.ImageClassifyFL.Activities.Design</AssemblyName>
-    <PackageId>_4thIR.ImageClassifyFL.Activities</PackageId>
+    <PackageId>4th-IR.ImageClassificationFacebookLevit128S.Activity.ImageClassification</PackageId>
     <EnableDefaultPageItems>false</EnableDefaultPageItems>
   </PropertyGroup>
   <!-- Package Metadata -->
   <PropertyGroup>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-    <Description>This package was generated using the UiPath VS Extension.</Description>
-    <Authors>Company</Authors>
-    <Company>Company</Company>
-    <Copyright>© 2022 Company</Copyright>
+    <Description>UI Path activity for image classification. (Image Classification - Facebook Levit 128S)</Description>
+    <Authors>Ato Toffah</Authors>
+    <Company>4th-IR</Company>
+    <Copyright>© 2022 4th-IR</Copyright>
     <PackageTags>UiPath Activit𝗒</PackageTags>
     <PackageProjectUrl>https://docs.uipath.com/integrations/docs/how-to-create-activities</PackageProjectUrl>
     <PackageIconUrl>https://raw.githubusercontent.com/NuGet/Samples/master/PackageIconNuspecExample/icon.png</PackageIconUrl>
@@ -36,6 +36,10 @@
   </ItemGroup>
   <!-- Package Icon -->
   <ItemGroup>
+    <None Include="..\..\Logo\logo2.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
     <None Include="packageIcon.png" Pack="true" Visible="false" PackagePath="" />
   </ItemGroup>
   <Target Name="CopyProjectReferencesToPackage" DependsOnTargets="BuildOnlySettings;ResolveReferences">
@@ -55,6 +59,9 @@
   <PropertyGroup>
     <OutputPath>bin\$(Configuration)\</OutputPath>
     <DocumentationFile>bin\$(Configuration)\_4thIR.ImageClassifyFL.Activities.Design.xml</DocumentationFile>
+    <RepositoryUrl>https://github.com/UnfetteredScholar/4thIR.ImageClassification-FacebookLevit128S.git</RepositoryUrl>
+    <Title>Image Classification</Title>
+    <PackageIcon>logo2.png</PackageIcon>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="UiPath.Workflow" Version="6.0.0-20220909-01" PrivateAssets="All" />
