--- a/4thIR.ImageClassifyVB/_4thIR.ImageClassifyVB/_4thIR.ImageClassifyVB.csproj
+++ b/4thIR.ImageClassifyVB/_4thIR.ImageClassifyVB/_4thIR.ImageClassifyVB.csproj
@@ -25,8 +25,11 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Contracts\" />
     <Folder Include="Enums\" />
     <Folder Include="Models\" />
+  </ItemGroup>
+<ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
   </ItemGroup>
 </Project>
