--- a/4thIR.ImageClassifyVB/_4thIR.ImageClassifyVB.Activities/_4thIR.ImageClassifyVB.Activities.csproj
+++ b/4thIR.ImageClassifyVB/_4thIR.ImageClassifyVB.Activities/_4thIR.ImageClassifyVB.Activities.csproj
@@ -12,6 +12,8 @@
   <ItemGroup>
     <PackageReference Include="System.Activities.Metadata" Version="6.0.0-*" PrivateAssets="All" />
     <PackageReference Include="UiPath.Workflow.Runtime" Version="6.0.0-20220909-01" PrivateAssets="All" />
+	<PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+	<PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\_4thIR.ImageClassifyVB\_4thIR.ImageClassifyVB.csproj" PrivateAssets="All" />
