Changed to .net6.0

--- a/4thIR.DocClassify/_4thIR.DocClassify.Activities.Design/_4thIR.DocClassify.Activities.Design.csproj
+++ b/4thIR.DocClassify/_4thIR.DocClassify.Activities.Design/_4thIR.DocClassify.Activities.Design.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net461</TargetFrameworks>
+    <TargetFrameworks>net6.0-windows</TargetFrameworks>
 		<RootNamespace>_4thIR.DocClassify.Activities.Design</RootNamespace>
 		<AssemblyName>_4thIR.DocClassify.Activities.Design</AssemblyName>
     <PackageId>4th-IR.DocumentClassificationKYC.Activity.DocumentClassification</PackageId>
@@ -62,21 +62,9 @@
     <RepositoryUrl>https://github.com/UnfetteredScholar/4thIR.DocumentClassification.git</RepositoryUrl>
   </PropertyGroup>
 	<ItemGroup>
-		<Reference Include="System" />
-    <Reference Include="System.Core" />
-		<Reference Include="System.Xml.Linq" />
-		<Reference Include="System.Data.DataSetExtensions" />
-		<Reference Include="Microsoft.CSharp" />
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
-		<Reference Include="System.Data" />
-		<Reference Include="System.Xml" />
-    <Reference Include="System.Activities" />
-    <Reference Include="System.Activities.Presentation" />
-    <Reference Include="System.Xaml" />
-    <Reference Include="WindowsBase" />
-    <Reference Include="System.Activities.Core.Presentation" />
-  </ItemGroup>
+		<PackageReference Include="UiPath.Workflow" Version="6.0.0-20220909-01" PrivateAssets="All" />
+		<PackageReference Include="System.Activities.Core.Presentation" Version="6.0.0-*" PrivateAssets="All" />
+	</ItemGroup>
   <ItemGroup>
     <Page Include="..\..\Shared\Themes\Generic.xaml">
       <Link>Themes\Generic.xaml</Link>
