--- a/4thIR.DocClassifyVLA/_4thIR.DocClassifyVLA.Activities.Design/_4thIR.DocClassifyVLA.Activities.Design.csproj
+++ b/4thIR.DocClassifyVLA/_4thIR.DocClassifyVLA.Activities.Design/_4thIR.DocClassifyVLA.Activities.Design.csproj
@@ -31,6 +31,13 @@
   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
     <PackageVersion>0.1.0</PackageVersion>
   </PropertyGroup>
+  <ItemGroup>
+    <None Remove="Designers\DocumentAnalysisDesigner.xaml" />
+    <None Remove="Designers\DocumentClassificationDesigner.xaml" />
+    <None Remove="Designers\DocumentMetaExtractionDesigner.xaml" />
+    <None Remove="Designers\DocumentTextAnalysisDesigner.xaml" />
+    <None Remove="Designers\DocumentTextExtractionDesigner.xaml" />
+  </ItemGroup>
   <!-- Package Icon -->
   <ItemGroup>
     <None Include="packageIcon.png" Pack="true" Visible="false" PackagePath="" />
@@ -64,6 +71,21 @@
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Page>
+    <Page Include="Designers\DocumentAnalysisDesigner.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </Page>
+    <Page Include="Designers\DocumentClassificationDesigner.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </Page>
+    <Page Include="Designers\DocumentMetaExtractionDesigner.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </Page>
+    <Page Include="Designers\DocumentTextAnalysisDesigner.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </Page>
+    <Page Include="Designers\DocumentTextExtractionDesigner.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </Page>
     <Page Include="Themes\Icons.xaml">
       <Generator>XamlIntelliSenseFileGenerator</Generator>
       <SubType>Designer</SubType>
@@ -71,10 +93,7 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\_4thIR.DocClassifyVLA.Activities\_4thIR.DocClassifyVLA.Activities.csproj" PrivateAssets="All"/>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Designers\" />
+    <ProjectReference Include="..\_4thIR.DocClassifyVLA.Activities\_4thIR.DocClassifyVLA.Activities.csproj" PrivateAssets="All" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
