--- a/4thIR.ImageClassifyR50/_4thIR.ImageClassifyR50.Activities/_4thIR.ImageClassifyR50.Activities.csproj
+++ b/4thIR.ImageClassifyR50/_4thIR.ImageClassifyR50.Activities/_4thIR.ImageClassifyR50.Activities.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net461</TargetFrameworks>
+    <TargetFrameworks>net6.0</TargetFrameworks>
 		<RootNamespace>_4thIR.ImageClassifyR50.Activities</RootNamespace>
 		<AssemblyName>_4thIR.ImageClassifyR50.Activities</AssemblyName>
     <PackageId>_4thIR.ImageClassifyR50.Activities.Implementation</PackageId>
@@ -9,23 +9,10 @@
     <OutputPath>bin\$(Configuration)\</OutputPath>
     <DocumentationFile>bin\$(Configuration)\_4thIR.ImageClassifyR50.Activities.xml</DocumentationFile>
   </PropertyGroup>
-  <ItemGroup>
-	  <Reference Include="System" />
-
-	  <Reference Include="System.Core" />
-	  <Reference Include="System.Xml.Linq" />
-	  <Reference Include="System.Data.DataSetExtensions" />
-
-
-	  <Reference Include="Microsoft.CSharp" />
-
-	  <Reference Include="System.Data" />
-	  <Reference Include="System.Xml" />
-	  <Reference Include="System.Activities" />
-	  <Reference Include="System.Windows" />
-	  <Reference Include="System.Xaml" />
-	  <Reference Include="WindowsBase" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="System.Activities.Metadata" Version="6.0.0-*" PrivateAssets="All" />
+		<PackageReference Include="UiPath.Workflow.Runtime" Version="6.0.0-20220909-01" PrivateAssets="All"/>
+	</ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\_4thIR.ImageClassifyR50\_4thIR.ImageClassifyR50.csproj" PrivateAssets="All" />
   </ItemGroup>
