Upgraded to .net6.0

--- a/4thIR.TextGenerateT/_4thIR.TextGenerateT.Activities/_4thIR.TextGenerateT.Activities.csproj
+++ b/4thIR.TextGenerateT/_4thIR.TextGenerateT.Activities/_4thIR.TextGenerateT.Activities.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net461</TargetFrameworks>
+    <TargetFrameworks>net6.0</TargetFrameworks>
 		<RootNamespace>_4thIR.TextGenerateT.Activities</RootNamespace>
 		<AssemblyName>_4thIR.TextGenerateT.Activities</AssemblyName>
     <PackageId>_4thIR.TextGenerateT.Activities.Implementation</PackageId>
@@ -9,22 +9,9 @@
     <OutputPath>bin\$(Configuration)\</OutputPath>
     <DocumentationFile>bin\$(Configuration)\_4thIR.TextGenerateT.Activities.xml</DocumentationFile>
   </PropertyGroup>
-  <ItemGroup>
-		<Reference Include="System" />
-
-		<Reference Include="System.Core" />
-		<Reference Include="System.Xml.Linq" />
-		<Reference Include="System.Data.DataSetExtensions" />
-
-
-		<Reference Include="Microsoft.CSharp" />
-
-		<Reference Include="System.Data" />
-		<Reference Include="System.Xml" />
-		<Reference Include="System.Activities" />
-		<Reference Include="System.Windows" />
-		<Reference Include="System.Xaml" />
-		<Reference Include="WindowsBase" />
+	<ItemGroup>
+		<PackageReference Include="System.Activities.Metadata" Version="6.0.0-*" PrivateAssets="All" />
+		<PackageReference Include="UiPath.Workflow.Runtime" Version="6.0.0-20220909-01" PrivateAssets="All"/>
 	</ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\_4thIR.TextGenerateT\_4thIR.TextGenerateT.csproj" PrivateAssets="All" />
