--- a/4thIR.TextClassifyVD/_4thIR.TextClassifyVD.Activities.Design/_4thIR.TextClassifyVD.Activities.Design.csproj
+++ b/4thIR.TextClassifyVD/_4thIR.TextClassifyVD.Activities.Design/_4thIR.TextClassifyVD.Activities.Design.csproj
@@ -102,5 +102,8 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\PublishProfiles\" />
+  </ItemGroup>
   <Import Project="..\..\Shared\UiPath.Shared.Activities.Design\UiPath.Shared.Activities.Design.projitems" Label="Shared" />
 </Project>
